join our team page

--- a/_sass/_recruiting.sass
+++ b/_sass/_recruiting.sass
@@ -114,6 +114,10 @@
 	width: 80%
 	margin-left: 5%
 
+.question
+	color: $brand
+	font-weight: bold
+
 .section-title
 	color: $brand
 	font-weight: bold
