--- a/_includes/subscribe.html
+++ b/_includes/subscribe.html
@@ -1,1 +1,1 @@
-{{site.data.settings.emma.form}}
+<iframe src="https://signup.e2ma.net/signup/1880236/1890881/" width="510" height="500" frameborder="0"></iframe>
