--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -27,7 +27,7 @@
   {% endif %}
   <a href="tel:1-{{site.data.settings.client.phone}}">{{site.data.settings.client.phone}}</a>
   <br>
-  <a href="mailto:{{site.data.settings.client.email}}">{{site.data.settings.client.email}}</a>
+  <a href="mailto:careers@anthonyrealtors.com">careers@anthonyrealtors.com</a>
 </address>
 
 <form class="contact-form" method="post" action="https://formspree.io/careers@anthonyrealtors.com">
