--- a/_includes/cta-sidebar.html
+++ b/_includes/cta-sidebar.html
@@ -18,5 +18,5 @@
 
 <div class="photo-cta">
   <img src="/img/cta-images/workshop.png"  class="photo-cta-container"/>
-  <div class="cta-button"><a href="#">Reserve Your Seat   <i class="fa fa-angle-double-right"></i></a></div>
+  <div class="cta-button"><a href="https://www.eventbrite.com/e/fort-wayne-real-estate-agent-business-planning-clinic-tickets-50709669988">Reserve Your Seat   <i class="fa fa-angle-double-right"></i></a></div>
 </div>
