--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -81,6 +81,7 @@
 			{% else %}
 				<p>&copy;{{ site.time | date: '%Y' }} {{site.data.settings.client.name}}</p>
 			{% endif %}
+			<p class="privacy"><a href="/privacy-policy/">Privacy Policy</a></p>
 	    Proudly Brought To You By
 	    <a href="http://getvyral.com" target="_blank">
 				Vyral Marketing</a><br>
