--- a/_sass/_footer.sass
+++ b/_sass/_footer.sass
@@ -17,6 +17,12 @@
 .attribution
 	text-align: center
 
+.privacy
+	margin-top: -2rem
+	a
+		text-decoration: underline
+		font-size: 16px
+
 .vyral-logo
 	fill: $brand
 	display: inline
