Updated '_includes/footer.html' via CloudCannon

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -70,6 +70,7 @@
 	      <div class="col-sm-4"><a href="mailto:{{site.data.settings.client.email}}">{{site.data.settings.client.email}}</a></div>
 	      <div class="col-sm-4"><a href="{{site.data.settings.client.url}}" target="_blank">{{site.data.settings.client.url | remove: "http://" | remove: "https://"}}</a></div>
 	    </div>
+	    <a href="http://trk.realestateexpress.com/?a=13432&c=903&p=r&s1="><img src="https://di90xkab1tp1l.cloudfront.net/903/Support horizontal 160 x 600.jpg" alt=""></a><br>
 	    <div class="row">
 	      <div class="twelve columns footer-socials">
 	        {% include socials.html %}
